--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/library
+spring.datasource.username=user-name
+spring.datasource.password=strong-password
 
+spring.sql.init.mode=always
+#spring.sql.init.schema-locations=classpath:/data.sql
+spring.sql.init.continue-on-error=true
+
+spring.liquibase.enabled=false
