--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.sql.init.mode=always
 #spring.sql.init.schema-locations=classpath:/data.sql
 spring.sql.init.continue-on-error=true
 
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
