--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -1,28 +1,53 @@
 version: "3.8"
+#services:
+#  db:
+#    image: postgres
+#    container_name: local_pgdb
+#    restart: always
+#    ports:
+#      - "5432:5432"
+#    environment:
+#      POSTGRES_USER: user-name
+#      POSTGRES_PASSWORD: strong-password
+#    volumes:
+#      - local_pgdata:/var/lib/postgresql/data
+#  pgadmin:
+#    image: dpage/pgadmin4
+#    container_name: pgadmin4_container
+#    restart: always
+#    ports:
+#      - "8888:80"
+#    environment:
+#      PGADMIN_DEFAULT_EMAIL: user-name@domain-name.com
+#      PGADMIN_DEFAULT_PASSWORD: strong-password
+#    volumes:
+#      - pgadmin-data:/var/lib/pgadmin
+#
+#volumes:
+#  local_pgdata:
+#  pgadmin-data:
+
+# --- MySql and PhpMyAdmin ---
 services:
   db:
-    image: postgres
-    container_name: local_pgdb
+    image: mysql:5.7
+    volumes:
+      - ./db_data:/var/lib/mysql
     restart: always
     ports:
-      - "5432:5432"
+      - "3306:3306"
     environment:
-      POSTGRES_USER: user-name
-      POSTGRES_PASSWORD: strong-password
-    volumes:
-      - local_pgdata:/var/lib/postgresql/data
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin4_container
-    restart: always
-    ports:
-      - "8888:80"
-    environment:
-      PGADMIN_DEFAULT_EMAIL: user-name@domain-name.com
-      PGADMIN_DEFAULT_PASSWORD: strong-password
-    volumes:
-      - pgadmin-data:/var/lib/pgadmin
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: db
+      MYSQL_PASSWORD: password
 
-volumes:
-  local_pgdata:
-  pgadmin-data:
+  phpmyadmin:
+    depends_on:
+      - db
+    image: phpmyadmin/phpmyadmin
+    restart: always
+    ports:
+      - "8090:80"
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: password
