--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version>
+        </dependency>
     </dependencies>
 	<dependencyManagement>
 		<dependencies>
